@@ -19,7 +19,7 @@
 {\Large
 A Native Prolog Compiler with Constraint Solving over Finite Domains
 
-Edition 1.6, for GNU Prolog version \input{version_no}\\
+Edition 1.7, for GNU Prolog version \input{version_no}\\
 
 \today
 }
